# AI-Vechicle-Wait-Time-Tracker

./: .dockerignore  CMakeLists.txt  DOCUMENTATION.md  Dockerfile  README.md  docker-compose.yml
include/: Logger.h
src/: CMakeCache.txt  ROIManager.cpp  ROIManager.h  TimerManager.cpp  TimerManager.h  VehicleTracker.cpp  VehicleTracker.h  VideoProcessor.cpp  VideoProcessor.h  audio_visualizer.cpp  main.cpp
